Fixed thumbnail image gap and buttons of events cards

--- a/src/app/components/hub-card/hub-card.component.scss
+++ b/src/app/components/hub-card/hub-card.component.scss
@@ -31,3 +31,7 @@
     --ion-grid-column-padding-lg: 5px;
     --ion-grid-column-padding-xl: 5px;
 }
+.compact-grid {
+  max-height: 110px; 
+  overflow: hidden;    
+}
